--- a/app/menu/menu.component.html
+++ b/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<!--The content below is only a placeholder and can be replaced.-->
   <nav class="navbar">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
